--- a/package.json
+++ b/package.json
@@ -1,19 +1,27 @@
 {
   "name": "markit-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "api for markit ecommerce app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nodemon index.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Jabink/Markit-Api.git"
   },
-  "author": "",
+  "author": "markit",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Jabink/Markit-Api/issues"
   },
-  "homepage": "https://github.com/Jabink/Markit-Api#readme"
+  "homepage": "https://github.com/Jabink/Markit-Api#readme",
+  "dependencies": {
+    "bcrypt": "^5.0.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.8",
+    "nodemon": "^2.0.6"
+  }
 }
