--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "url": "https://github.com/Jabink/Markit-Api/issues"
   },
   "engines": {
-    "node": "14.15.3"
+    "node": "14.15.3",
+    "npm":"6.14.9"
   },
   "homepage": "https://github.com/Jabink/Markit-Api#readme",
   "dependencies": {
